Replace ValuesNode::Expression with RowExpression